force-app/main/default/objects/Scraper_Log__c/Scraper_Log__c.object-meta.xml
<CustomObject>
    <label>Scraper Log</label>
    <pluralLabel>Scraper Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>