force-app/main/default/objects/Scraper_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Details if the callout failed.</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>