force-app/main/default/objects/Scraper_Log__c/fields/Results_Count__c.field-meta.xml
<CustomField>
    <fullName>Results_Count__c</fullName>
    <description>How many articles were returned.</description>
    <label>Results Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>