force-app/main/default/objects/Scraper_Log__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <description>The keyword used for searching.</description>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>